--- a/TKV2026_soubory/sheet012.htm
+++ b/TKV2026_soubory/sheet012.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10726 style='border-collapse:
- collapse;table-layout:fixed;width:8060pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10825 style='border-collapse:
+ collapse;table-layout:fixed;width:8134pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -188,8 +188,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
+ width:134pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -358,7 +358,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1088,7 +1088,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>17</td>
+  <td class=xl164 style='border-left:none'>18</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1217,16 +1217,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8250</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8800</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>298
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>317
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>6,1</td>
+  <td class=xl148 style='border-top:none;border-left:none'>6,0</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,16 +1355,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6850</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>248
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>270
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>14</td>
+  <td class=xl164 style='border-top:none;border-left:none'>15</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1587,7 +1587,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>5200</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>188
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>187
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1812,16 +1812,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>159
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>175
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
   <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
-  none'>1 173 Kč</td>
+  none'>1 242 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2040,11 +2040,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3950</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>143
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>155
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2524,8 +2524,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2150</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2631,9 +2631,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2797,9 +2799,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2862,7 +2866,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>4</td>
+  <td class=xl82 style='border-top:none;border-left:none'>5</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2965,9 +2969,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3133,9 +3140,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3298,9 +3307,11 @@ else
   [CZE069712]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Landová Aneta [CZE075881]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14768,7 +14779,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=179 style='width:134pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
